Accessibility: fix contrast issues in buttons

--- a/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/_components.scss
+++ b/plugin/src/main/resources/GUI/META-INF/resources/uii/template/assets/css/src/_components.scss
@@ -33,14 +33,28 @@
 }
 
 .btn-accent {
-  color: var(--clr-accent);
+  color: var(--clr-primary-600);
   border: 1px solid var(--clr-accent);
+  background-color: var(--clr-accent);
+
+  &:hover {
+    --clr-accent: #DD8C00;
+  }
 }
 
-.btn-accent:hover {
-  color: #fff;
-  background-color: var(--clr-accent);
+
+// BS override
+.btn-outline-secondary {
+  border-color: var(--clr-text-400);
+  color: var(--clr-text-400);
+
+  &:hover {
+    border-color: var(--clr-text-400);
+    color: var(--clr-text-light);
+    background-color: var(--clr-text-400);
+  }
 }
+
 
 /* ******************************* */
 /* FORM ELEMENTS (inputs etc)     */
